# aigpsigma-sdk

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/: verify.rs
js/: package.json
js/src/: client.ts  index.ts  types.ts
src/: client.rs  client.ts  lib.rs  types.rs
