[package]
name        = "aigpsigma-sdk"
version     = "0.2.0"
edition     = "2021"
description = "Official Rust SDK for the AIGP-Σ AI Certification Registry"
license     = "MIT"
repository  = "https://github.com/mariusonly4share/aigpsigma-sdk"
keywords    = ["ai", "certification", "aigp", "sigma", "registry"]
categories  = ["api-bindings", "authentication"]

[lib]
name = "aigpsigma_sdk"
path = "src/lib.rs"

[[bin]]
name = "aigpsigma"
path = "src/bin/aigpsigma.rs"

[dependencies]
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
clap     = { version = "4", features = ["derive", "env"] }
thiserror = "1"
sha2      = "0.10"
